--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -86,7 +86,57 @@ a.desc:after {
     margin-top: 5px;
     color: #999;
 }
-
+.site-title h2{
+    text-align: center;
+    font-size: 54px;
+    text-transform: uppercase;
+    color: green;
+}
+.card-content .content img{
+    position: relative;
+    width: 100%;
+    height: 250px;
+    padding: 10px;
+}
+.card-content .content p{
+    font-size: 18px;
+    padding: 10px;
+    text-align: left;
+}
+.card-content .content {
+    position: relative;
+    min-height: 488px;
+    max-width: 100%;
+    box-shadow: 0px 0px 4px 1px black;
+}
+.spacer{
+    padding:50px 0px;
+}
+.form-control{
+    border-radius: unset;
+    box-shadow: none;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    padding: 0;
+    width: 100%;
+    max-width: 100%;
+    background: transparent;
+    border-bottom: #736969 1px solid;
+}
+.has-error .form-control {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+app-header:not([style-scope]):not(.style-scope) {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    color: #fff;
+    background-color: green !important;
+}
 .error-summary {
     color: #a94442;
     background: #fdf7f7;
@@ -117,4 +167,14 @@ a.desc:after {
 
 .nav > li > form > button.logout:focus {
     outline: none;
+}
+@media (min-width:600px){
+    .paper-icon-button-0 iron-icon.paper-icon-button{
+      display: none;
+    }
+}
+@media (max-width:600px) {
+    .paper-tab-0 .tab-content.paper-tab{
+        display: none;
+    }
 }
