--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -13,7 +13,13 @@ body {
 .wrap > .container {
     padding: 70px 15px 20px;
 }
-
+.body-container {
+    max-width: 950px !Important;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    height: AUTO;
+}
 .footer {
     height: 60px;
     background-color: #f5f5f5;
